# bayesian_flow_networks

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  setup.py
examples/: MNIST_continuous_bfn.py  swiss_roll.py  swiss_roll_bfn.py  two_moons_classifier_free_guidance.py
tests/: test_networks.py  test_utils.py
torch_bfn/: __init__.py  bfn.py  diffusion.py  networks.py  utils.py
torch_bfn/networks/: __init__.py  base.py  resnet.py  unet.py
